--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -29,38 +29,18 @@
    <center>
       <ScrollPane prefHeight="645.0" prefWidth="635.0" BorderPane.alignment="CENTER">
          <content>
-            <VBox prefHeight="579.0" prefWidth="900.0" spacing="10.0">
+            <VBox prefHeight="579.0" prefWidth="900.0" spacing="15.0">
                <children>
-                  <Label prefHeight="30.0" prefWidth="499.0" text="Top results:">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets left="20.0" top="20.0" />
-                     </VBox.margin>
-                  </Label>
-                  <VBox fx:id="topResultListVBox" prefWidth="800.0" spacing="10.0">
-                     <VBox.margin>
-                        <Insets left="20.0" />
-                     </VBox.margin>
+                  <Label text="Top results:" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-padding: 20 0 10 20;" />
+                  <VBox fx:id="topResultListVBox" prefWidth="800.0" spacing="10.0" style="-fx-padding: 0 20;">
                   </VBox>
-                  <HBox>
-                     <VBox.margin>
-                        <Insets left="20.0" />
-                     </VBox.margin>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-padding: 20 20 0 20;">
                      <children>
-                        <Label prefHeight="30.0" prefWidth="304.0" text="More results from Google Books:">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Label>
+                        <Label text="More results from Google Books:" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
                         <ImageView fx:id="loadingImageView" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" />
                      </children>
                   </HBox>
-                  <VBox fx:id="googleBookListVBox" prefHeight="281.0" prefWidth="800.0" spacing="10.0">
-                     <VBox.margin>
-                        <Insets left="20.0" />
-                     </VBox.margin>
+                  <VBox fx:id="googleBookListVBox" prefHeight="281.0" prefWidth="800.0" spacing="10.0" style="-fx-padding: 0 20;">
                   </VBox>
                </children>
             </VBox>
@@ -68,109 +48,29 @@
       </ScrollPane>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="310.0" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="310.0" spacing="15.0" style="-fx-background-color: #f4f4f4; -fx-padding: 20; -fx-border-color: #dcdcdc; -fx-border-width: 1;">
          <children>
-            <Label prefHeight="30.0" prefWidth="499.0" text="Filters">
-               <font>
-                  <Font size="20.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="10.0" top="20.0" />
-               </VBox.margin>
-            </Label>
-            <Label prefHeight="30.0" prefWidth="499.0" text="Include tags:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="10.0" />
-               </VBox.margin>
-            </Label>
-            <FlowPane fx:id="tagIncludedSelectedFlowPane" hgap="5.0" minHeight="35.0" prefWidth="290.0" rowValignment="TOP" styleClass="border" vgap="5.0">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
+            <Label text="Filters" style="-fx-font-size: 20px; -fx-font-weight: bold;" />
+            <Label text="Include tags:" style="-fx-font-size: 18px;" />
+            <FlowPane fx:id="tagIncludedSelectedFlowPane" hgap="5.0" vgap="5.0" minHeight="35.0" prefWidth="290.0" style="-fx-border-color: #dcdcdc; -fx-border-radius: 5; -fx-padding: 5;">
             </FlowPane>
-            <MenuButton fx:id="tagIncludedSelectDropdown" mnemonicParsing="false" text="Select Tag...">
-               <VBox.margin>
-                  <Insets left="10.0" />
-               </VBox.margin>
-            </MenuButton>
-            <Label prefHeight="30.0" prefWidth="499.0" text="Exclude tags:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Label>
-            <FlowPane fx:id="tagExcludedSelectedFlowPane" hgap="5.0" minHeight="35.0" prefWidth="200.0" styleClass="border" vgap="5.0">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
+            <MenuButton fx:id="tagIncludedSelectDropdown" mnemonicParsing="false" text="Select Tag..." style="-fx-padding: 5 10; -fx-font-size: 14px;" />
+            <Label text="Exclude tags:" style="-fx-font-size: 18px; -fx-padding: 10 0 0 0;" />
+            <FlowPane fx:id="tagExcludedSelectedFlowPane" hgap="5.0" vgap="5.0" minHeight="35.0" prefWidth="200.0" style="-fx-border-color: #dcdcdc; -fx-border-radius: 5; -fx-padding: 5;">
             </FlowPane>
-            <MenuButton fx:id="tagExcludedSelectDropdown" mnemonicParsing="false" text="Select Tag...">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </MenuButton>
-            <HBox alignment="CENTER_LEFT" prefHeight="33.0" prefWidth="310.0" spacing="5.0">
+            <MenuButton fx:id="tagExcludedSelectDropdown" mnemonicParsing="false" text="Select Tag..." style="-fx-padding: 5 10; -fx-font-size: 14px;" />
+            <HBox alignment="CENTER_LEFT" spacing="10.0" style="-fx-padding: 10 0;">
                <children>
-                  <Label prefHeight="30.0" prefWidth="126.0" text="Rating range:">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-                  <Label fx:id="lowRatingLabel" text="0.00">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <FontIcon iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="14">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </FontIcon>
-                  <Label text="-">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="highRatingLabel" text="5.00">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <FontIcon iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="14">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </FontIcon>
+                  <Label text="Rating range:" style="-fx-font-size: 18px;" />
+                  <Label fx:id="lowRatingLabel" text="0.00" style="-fx-font-size: 18px;" />
+                  <FontIcon iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="14" />
+                  <Label text="-" style="-fx-font-size: 18px;" />
+                  <Label fx:id="highRatingLabel" text="5.00" style="-fx-font-size: 18px;" />
+                  <FontIcon iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="14" />
                </children>
             </HBox>
-            <RangeSlider fx:id="ratingSlider" blockIncrement="0.01" highValue="1.0" lowValue="0.0" max="5.0" showTickLabels="true">
-               <VBox.margin>
-                  <Insets left="10.0" right="10.0" />
-               </VBox.margin>
-            </RangeSlider>
-            <VBox alignment="TOP_CENTER" prefHeight="32.0" prefWidth="300.0" VBox.vgrow="ALWAYS">
-               <VBox.margin>
-                  <Insets right="10.0" />
-               </VBox.margin>
-               <children>
-                  <Button fx:id="applyFiltersButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onApplyFiltersButtonClicked" text="Apply" textAlignment="CENTER" />
-               </children>
-            </VBox>
-           
+            <RangeSlider fx:id="ratingSlider" blockIncrement="0.01" highValue="1.0" lowValue="0.0" max="5.0" showTickLabels="true" style="-fx-padding: 0 10;" />
+            <Button fx:id="applyFiltersButton" text="Apply" style="-fx-background-color: #457B9D; -fx-text-fill: #FFFFFF; -fx-font-size: 14px; -fx-padding: 10; -fx-border-radius: 5; -fx-background-radius: 5;" />
          </children>
       </VBox>
    </left>
