--- a/src/main/resources/org/proview/test/AdminManagementNavBarView.fxml
+++ b/src/main/resources/org/proview/test/AdminManagementNavBarView.fxml
@@ -7,7 +7,7 @@
 
 <VBox fx:id="root" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="148.0" spacing="10.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.AdminManagementNavBarView">
    <children>
-      <Button mnemonicParsing="false" onAction="#onAddDeleteButtonClick" prefWidth="105.0" text="Add/Delete">
+      <Button mnemonicParsing="false" onAction="#onAddDeleteButtonClick" prefWidth="105.0" text="Add Book">
          <VBox.margin>
             <Insets />
          </VBox.margin>
