--- a/src/main/resources/org/proview/test/NavBarView.fxml
+++ b/src/main/resources/org/proview/test/NavBarView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Line?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<HBox fx:id="navBarHBox" prefHeight="50.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
+<HBox fx:id="navBarHBox" prefHeight="50.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.NavBarView">
    <children>
       <AnchorPane fx:id="topPane" prefHeight="0.0" prefWidth="1300.0" styleClass="nav-bar">
          <children>
@@ -39,11 +39,11 @@
                      <graphic>
                         <FontIcon iconLiteral="far-list-alt" iconSize="14" />
                      </graphic></Button>
-                  <Button onAction="#onGameButtonClicked" styleClass="nav-button" text="Games">
+                  <Button fx:id="gameButton" onAction="#onGameButtonClicked" styleClass="nav-button" text="Games">
                      <graphic>
                         <FontIcon iconLiteral="fas-gamepad" iconSize="14" />
                      </graphic></Button>
-                  <Button onAction="#onDashboardButtonClicked" styleClass="nav-button" text="Dashboard">
+                  <Button fx:id="dashboardButton" onAction="#onDashboardButtonClicked" styleClass="nav-button" text="Dashboard">
                      <graphic>
                         <FontIcon iconLiteral="far-chart-bar" iconSize="14" />
                      </graphic></Button>
