add confirmation and information pop up

--- a/src/main/resources/org/proview/test/BookManagForAdminView.fxml
+++ b/src/main/resources/org/proview/test/BookManagForAdminView.fxml
@@ -68,7 +68,7 @@
             <HBox prefHeight="25.0" prefWidth="1193.0" spacing="20.0">
                <children>
                   <ComboBox fx:id="columnComboBox" prefHeight="25.0" prefWidth="150.0" promptText="Column" />
-                  <TextField fx:id="searchTextField" minWidth="1200.0" prefHeight="25.0" promptText="Search" />
+                  <TextField fx:id="searchTextField" prefHeight="25.0" prefWidth="1000.0" promptText="Search" />
                </children>
             </HBox>
             <TableView fx:id="booksTableView" prefHeight="487.0" prefWidth="1193.0">
