--- a/src/main/resources/org/proview/test/EditBookInfoView.fxml
+++ b/src/main/resources/org/proview/test/EditBookInfoView.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -31,13 +32,14 @@
                   <TextField fx:id="authorField" promptText="Author" />
                   <TextField fx:id="copiesField" prefHeight="25.0" prefWidth="168.0" promptText="Number of copies available" />
                   <TextArea fx:id="descriptionField" prefHeight="128.0" prefWidth="435.0" promptText="Description" wrapText="true" />
-                  <HBox fx:id="tagSelectedHBox" alignment="CENTER_LEFT" minHeight="30.0" prefWidth="437.0" spacing="10.0" styleClass="border" stylesheets="@styles/EditBookInfoView.css">
+                  <FlowPane fx:id="tagSelectedFlowPane" hgap="5.0" prefHeight="40.0" prefWidth="437.0" styleClass="border" vgap="5.0">
                      <VBox.margin>
                         <Insets />
                      </VBox.margin>
                      <padding>
-                        <Insets left="10.0" />
-                     </padding></HBox>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </FlowPane>
                   <MenuButton fx:id="tagSelectDropdown" mnemonicParsing="false" text="Select Tag..." />
                </children>
                <HBox.margin>
