--- a/src/main/resources/org/proview/test/BookCellCompactView.fxml
+++ b/src/main/resources/org/proview/test/BookCellCompactView.fxml
@@ -10,75 +10,81 @@
 <?import javafx.scene.text.Font?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="book-cell-button" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.BookCellCompactView">
+<Button mnemonicParsing="false" onAction="#onMouseClick" styleClass="cell-form" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Container.BookCellCompactView">
    <graphic>
-      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="900.0">
+      <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="90.0" prefWidth="900.0">
          <children>
-            <ImageView fx:id="coverImageView" fitHeight="75.0" fitWidth="46.875" pickOnBounds="true" preserveRatio="true" />
-            <VBox prefHeight="75.0">
+            <ImageView fx:id="coverImageView" fitHeight="90.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true" />
+            <VBox prefHeight="90.0" prefWidth="557.0">
                <children>
-                  <Label fx:id="titleLabel" alignment="TOP_LEFT" minWidth="300.0" prefHeight="31.0" text="#1. Book #1">
+                  <Label fx:id="titleLabel" alignment="TOP_LEFT" minWidth="300.0" prefHeight="31.0" text="1. Book #1">
                      <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets left="10.0" top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Label fx:id="authorLabel" alignment="TOP_LEFT" prefHeight="27.0" text="Author">
-                     <font>
-                        <Font size="16.0" />
+                        <Font name="System Bold" size="18.0" />
                      </font>
                      <VBox.margin>
                         <Insets left="10.0" />
                      </VBox.margin>
                   </Label>
+                  <Label fx:id="authorLabel" alignment="TOP_LEFT" prefHeight="27.0" text="Author">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets left="10.0" top="-5.0" />
+                     </VBox.margin>
+                  </Label>
+                  <HBox fx:id="infoHBox" alignment="CENTER_LEFT" prefHeight="37.0" prefWidth="300.0" spacing="3.0">
+                     <children>
+                        <Label fx:id="ratingLabel" alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="25.0" text="4.50" wrapText="true">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                        </Label>
+                        <FontIcon fx:id="starRatingIcon" iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="18" styleClass="ikonli-font-icon">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </FontIcon>
+                        <Label fx:id="issuesLabel" text="4">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Label>
+                        <FontIcon fx:id="issuesIcon" iconColor="#457b9d" iconLiteral="fas-book-reader" iconSize="18" styleClass="ikonli-font-icon" />
+                     </children>
+                     <VBox.margin>
+                        <Insets left="10.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="-15.0" />
+                     </padding>
+                  </HBox>
                </children>
                <HBox.margin>
-                  <Insets left="10.0" />
+                  <Insets />
                </HBox.margin>
             </VBox>
             <VBox prefHeight="75.0">
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="44.0">
                      <children>
-                        <HBox fx:id="tagHBox" alignment="CENTER_RIGHT" minWidth="250.0" prefHeight="44.0" spacing="3.0">
+                        <HBox fx:id="tagHBox" alignment="CENTER_RIGHT" minWidth="250.0" prefHeight="44.0" prefWidth="407.0" spacing="3.0">
                            <HBox.margin>
-                              <Insets right="10.0" />
-                           </HBox.margin>
-                        </HBox>
-                        <HBox fx:id="infoHBox" alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="110.0" spacing="3.0">
-                           <children>
-                              <Label fx:id="ratingLabel" alignment="CENTER_RIGHT" contentDisplay="TOP" prefHeight="25.0" text="4.50" wrapText="true">
-                                 <font>
-                                    <Font name="System Bold" size="18.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </Label>
-                              <FontIcon fx:id="starRatingIcon" iconColor="GOLDENROD" iconLiteral="fas-star" iconSize="18" styleClass="ikonli-font-icon">
-                                 <HBox.margin>
-                                    <Insets right="5.0" />
-                                 </HBox.margin>
-                              </FontIcon>
-                              <Label fx:id="issuesLabel" text="4">
-                                 <font>
-                                    <Font name="System Bold" size="18.0" />
-                                 </font>
-                              </Label>
-                              <FontIcon fx:id="issuesIcon" iconColor="#457b9d" iconLiteral="fas-book-reader" iconSize="18" styleClass="ikonli-font-icon" />
-                           </children>
-                           <HBox.margin>
-                              <Insets right="10.0" />
+                              <Insets right="10.0" top="-10.0" />
                            </HBox.margin>
                         </HBox>
                      </children>
                   </HBox>
                   <Label fx:id="copiesLabel" alignment="TOP_RIGHT" contentDisplay="TOP" prefHeight="25.0" prefWidth="538.0" text="3 copies available" wrapText="true">
                      <font>
-                        <Font name="System Italic" size="16.0" />
+                        <Font name="System Italic" size="14.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
                      <padding>
                         <Insets right="10.0" />
                      </padding>
