--- a/src/main/resources/org/proview/test/LoginView.fxml
+++ b/src/main/resources/org/proview/test/LoginView.fxml
@@ -9,10 +9,12 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.LoginView">
+<AnchorPane prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.LoginView">
    <VBox alignment="CENTER" layoutX="435.0" layoutY="223.0" onKeyReleased="#onKeyReleased" prefHeight="345.0" prefWidth="419.0" spacing="15.0" styleClass="login-form">
       <children>
          <!-- Label hiển thị thông báo -->
@@ -23,10 +25,40 @@
                <Font size="14.0" />
             </font>
          </Label>
+         <HBox prefHeight="100.0" prefWidth="200.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username:">
+                  <font>
+                     <Font name="System Bold" size="16.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets top="10.0" />
+                  </HBox.margin>
+               </Text>
+            </children>
+            <VBox.margin>
+               <Insets bottom="-10.0" />
+            </VBox.margin>
+         </HBox>
    
             <!-- TextField và PasswordField -->
          <TextField fx:id="loginUsernameField" promptText="Username" styleClass="input" />
-         <PasswordField fx:id="loginPasswordField" promptText="Password" styleClass="input" />
+         <HBox layoutX="30.0" layoutY="157.0" prefHeight="100.0" prefWidth="200.0">
+            <children>
+               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
+                  <font>
+                     <Font name="System Bold" size="16.0" />
+                  </font>
+                  <HBox.margin>
+                     <Insets top="-10.0" />
+                  </HBox.margin>
+               </Text>
+            </children>
+         </HBox>
+         <PasswordField fx:id="loginPasswordField" promptText="Password" styleClass="input">
+            <VBox.margin>
+               <Insets top="-10.0" />
+            </VBox.margin></PasswordField>
    
             <!-- Button Sign In -->
          <Button fx:id="loginButton" onAction="#onLoginButtonClick" prefHeight="0.0" prefWidth="379.0" styleClass="button" text="Login" />
