--- a/src/main/resources/org/proview/test/styles/ListView.css
+++ b/src/main/resources/org/proview/test/styles/ListView.css
@@ -7,7 +7,7 @@
 
 .cell-form {
     -fx-padding: 0px;
-    -fx-background-color: #f0f0f0;
+    -fx-background-color: #ffffff;
     -fx-border-radius: 10px;
     -fx-background-radius: 10px;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
