--- a/src/main/resources/org/proview/test/RegisterView.fxml
+++ b/src/main/resources/org/proview/test/RegisterView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1300.0" stylesheets="@styles/RegisterView.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.RegisterView">
+<AnchorPane prefHeight="700.0" prefWidth="1300.0" stylesheets="@styles/RegisterView.css" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.RegisterView">
    <VBox alignment="CENTER" layoutX="435.0" layoutY="24.0" onKeyReleased="#onKeyReleased" prefHeight="345.0" prefWidth="419.0" spacing="15.0" styleClass="register-form">
       <children>
          <ImageView fx:id="avatarField" fitHeight="150.0" fitWidth="274.0" pickOnBounds="true" preserveRatio="true" />
@@ -39,7 +39,7 @@
       </VBox.margin>
       <stylesheets>
          <URL value="@styles/styles.css" />
-         <URL value="@styles/ReviewCellView.css" />
+         <URL value="@styles/RegisterView.css" />
       </stylesheets>
    </VBox>
 </AnchorPane>
