--- a/src/main/resources/org/proview/test/NormalUserDashboardView.fxml
+++ b/src/main/resources/org/proview/test/NormalUserDashboardView.fxml
@@ -51,7 +51,7 @@
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
                           <yAxis>
-                            <NumberAxis minorTickLength="1.0" side="LEFT" tickUnit="1.0" upperBound="1.0" />
+                            <NumberAxis label="Books" minorTickLength="1.0" side="LEFT" tickUnit="1.0" upperBound="1.0" />
                           </yAxis>
                         </BarChart>
                                 <PieChart fx:id="booksBorrowedPieChart" title="Percentage of Books That You Have Borrowed So Far" />
