--- a/src/main/resources/org/proview/test/SearchResultView.fxml
+++ b/src/main/resources/org/proview/test/SearchResultView.fxml
@@ -15,7 +15,7 @@
 <?import org.controlsfx.control.RangeSlider?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.SearchResultView">
+<BorderPane fx:id="homeBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.proview.test.Scene.SearchResultView">
    <top>
       <fx:include source="NavBarView.fxml" />
    </top>
@@ -95,7 +95,7 @@
                </VBox.margin></RangeSlider>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="applyFiltersButton" alignment="TOP_CENTER" prefWidth="68.0" styleClass="apply-button" text="Apply" />
+                  <Button fx:id="applyFiltersButton" alignment="TOP_CENTER" onAction="#onApplyFiltersButtonClicked" prefWidth="68.0" styleClass="apply-button" text="Apply" />
                </children>
             </VBox>
          </children>
