--- a/src/main/resources/org/proview/test/styles/SearchResultView.css
+++ b/src/main/resources/org/proview/test/styles/SearchResultView.css
@@ -25,7 +25,7 @@
     -fx-border-color: #dcdcdc;
     -fx-border-radius: 10;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.1), 10, 0, 0, 4);
-
+    -fx-padding: 5 5 5 5;
 }
 
 .menu-button {
@@ -53,4 +53,9 @@
 }
 
 .range-slider {
+}
+
+.menu {
+    -fx-max-height: 200px;
+    -fx-overflow-y: auto;
 }
